# kprussing.github.io

./: .gitattributes  README.rst  SConstruct  _config.yml  about.html  about.rst  conf.py  index.html  index.rst  kprussing.tex  manpage.css  newpost  noxfile.py  preamble.tex  references.bib  search.html  searchindex.js
_includes/: svg-icons.html
_layouts/: default.html  post.html
_site/: about.html  dnd.html  fun.html  index.html
_sources/: index.rst.txt
blog/: 2014-01-17-henson-prayer.html  2014-09-17-Hello-World.html  2014-09-17-writing-with-markdown.html  2014-09-27-least-squares.html  2014-10-12-salvaging-game-data-on-android.html  2015-03-24-a-quick-note-on-macports.html  2015-05-13-dumping-svn-repo.html  2015-07-16-yay-package-managers.html  2015-08-10-pytables-and-windows.html  2015-08-24-debug-pyqt-application.html  2016-01-18-cygwin-note.html  2016-06-05-glx-and-xquartz.html  2017-01-19-unified-terminal.html  2018-01-18-gcc-plugin-notes.html  2020-03-10-reformatting-the-website.html  2020-06-an-open-letter-to-council.html  2020-09-18-open-letter-to-my-senators.html  index.html
fun/: index.html
my-theme/: layout.html  theme.conf
posts/: 2014-01-17-henson-prayer.rst  2014-09-17-Hello-World.rst  2014-09-17-writing-with-markdown.rst  2014-09-27-least-squares.rst  2014-10-12-salvaging-game-data-on-android.rst  2015-03-24-a-quick-note-on-macports.rst  2015-05-13-dumping-svn-repo.rst  2015-06-05-glx-and-x.rst  2015-07-16-yay-package-managers.rst  2015-08-10-pytables-and-windows.rst  2015-08-24-debug-pyqt-application.rst  2015-11-28-computational-physics.rst  2016-01-18-cygwin-note.rst  2017-01-19-unified-terminal.rst  index.rst  index.tex  (+1 more)
posts/2020-01-18-writing-a-parser/: CMakeLists.txt  database.cpp  database.hpp  index.tex  lexer.l  main.cpp  parser.y
posts/2020-01-18-writing-a-parser/bison-1/: CMakeLists.txt  lexer.l  parser.y
posts/2020-01-18-writing-a-parser/bison-2/: CMakeLists.txt  lexer.l  lexer.l.patch  parser.y
posts/2020-01-18-writing-a-parser/flex-only/: CMakeLists.txt  flex-only.l
(+46 files in other folders)
